--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.4
+  rflutter_alert: ^2.0.4
 
 dev_dependencies:
   flutter_test:
