--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "@nestjs/mongoose": "^8.0.1",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^7.5.1",
+    "@types/morgan": "^1.9.3",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "mongoose": "^5.13.8",
+    "morgan": "^1.10.0",
+    "nest-morgan": "^2.0.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
